Add changes to html and css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Landed by HTML5 UP</title>
+	<title>Diogo Martins - Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 	<div id="page-wrapper">
 
 		<!-- Header -->
-		<!--<header id="header">
+		<header id="header">
 			<h1 id="logo"><a href="index.html">Landed</a></h1>
 			<nav id="nav">
 				<ul>
@@ -45,7 +45,7 @@
 					<li><a href="#" class="button primary">Sign Up</a></li>
 				</ul>
 			</nav>
-		</header>-->
+		</header>
 
 		<!-- Banner -->
 		<section id="banner">
@@ -55,14 +55,20 @@
 					<h2>Diogo Martins</h2>
 					<p>Game Developer<br>Programmer<br>2D Artist</p>
 					<ul class="icons">
-						<li><a href="#" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a>
-							<li><a href="#" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a>
-							</li>
-							<li><a href="#" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a>
-						<!--<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
-						<li><a href="https://gitlab.com/diogo_martins99" target="_blank" class="icon brands alt fa-gitlab"><span class="label">GitLab</span></a></li>
-						<li><a href="#" target="_blank" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="#" target="_blank" class="icon brands alt fa-facebook-f"><span
+									class="label">Facebook</span></a>
+						<li><a href="#" target="_blank" class="icon brands alt fa-instagram"><span
+									class="label">Instagram</span></a>
+						</li>
+						<li><a href="#" target="_blank" class="icon brands alt fa-twitter"><span
+									class="label">Twitter</span></a></li>
+						<li><a href="#" target="_blank" class="icon brands alt fa-linkedin-in"><span
+									class="label">LinkedIn</span></a>
+							<!--<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
+						<li><a href="https://gitlab.com/diogo_martins99" target="_blank"
+								class="icon brands alt fa-gitlab"><span class="label">GitLab</span></a></li>
+						<li><a href="#" target="_blank" class="icon solid alt fa-envelope"><span
+									class="label">Email</span></a></li>
 					</ul>
 				</header>
 
@@ -99,17 +105,17 @@
 					</div>
 				</div>
 			</div>
-			<a href="#four" class="goto-next scrolly">Next</a>
+			<a href="#two" class="goto-next scrolly">Next</a>
 		</section>
-		<!-- Four -->
-		<section id="four" class="wrapper style1 special fade-up">
+		<!-- Two -->
+		<section id="two" class="wrapper style1 special fade-up">
 			<div class="container">
 				<header class="major">
 					<h2>What are my main qualifications?</h2>
 					<p></p>
 				</header>
 				<div class="box alt">
-					<div class="row gtr-uniform">
+					<div class="row aln-center gtr-uniform">
 						<section class="col-4 col-6-medium col-12-xsmall">
 							<span class="icon solid alt major fa-keyboard"></span>
 							<h3>Programming</h3>
@@ -122,8 +128,9 @@
 							<span class="icon solid alt major fa-gamepad"></span>
 							<h3>Game Design</h3>
 							<p>One of my most consistant roles in game development has been game design, which I
-								had in all of my previous projects. Other extensions of this area such as Level
-								Design have also been a part of my work.
+								had in all of my previous projects. Other extensions of this area such as World and
+								Level
+								Design and have also been a part of my work.
 							</p>
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
@@ -131,7 +138,7 @@
 							<h3>2D Art & Graphic Design</h3>
 							<p>UI design, promo-art, image manipulation and graphic design
 								are all things I've worked on and am familiarized with. I specialize in Photoshop
-								and have some skill with vector-based programs such as Illustrator.
+								and have basic knowledge in vector-based programs such as Illustrator.
 							</p>
 						</section>
 						<!--
@@ -155,13 +162,14 @@
 				</div>
 				<footer class="major">
 					<ul class="actions special">
-						<li><a href="#two" class="button goto-next scrolly">See my projects</a></li>
+						<li><a href="#three" class="button scrolly">See my projects</a></li>
 					</ul>
+
 				</footer>
 			</div>
 		</section>
-		<!-- Two -->
-		<section id="two" class="spotlight style2 right">
+		<!-- Three -->
+		<section id="three" class="spotlight style2 right">
 			<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 			<div class="content">
 				<header>
@@ -172,14 +180,14 @@
 					Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan
 					consequat adipiscing lorem.</p>
 				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a href="left-sidebar.html" class="button">Learn More</a></li>
 				</ul>
 			</div>
-			<a href="#three" class="goto-next scrolly">Next</a>
+			<a href="#four" class="goto-next scrolly">Next</a>
 		</section>
 
-		<!-- Three -->
-		<section id="three" class="spotlight style3 left">
+		<!-- Four -->
+		<section id="Four" class="spotlight style3 left">
 			<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 			<div class="content">
 				<header>
@@ -193,9 +201,46 @@
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
 			</div>
-			<a href="#four" class="goto-next scrolly">Next</a>
+			<a href="#five" class="goto-next scrolly">Next</a>
 		</section>
 
+		<!-- Five -->
+		<section id="five" class="spotlight style2 right">
+			<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+			<div class="content">
+				<header>
+					<h2>Interdum amet non magna accumsan</h2>
+					<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+				</header>
+				<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing.
+					Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan
+					consequat adipiscing lorem.</p>
+				<ul class="actions">
+					<li><a href="#" class="button">Learn More</a></li>
+				</ul>
+			</div>
+			<a href="#six" class="goto-next scrolly">Next</a>
+		</section>
+
+		<!-- Six -->
+		<section id="six" class="spotlight style3 left">
+			<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+			<div class="content">
+				<header>
+					<h2>Interdum felis blandit praesent sed augue</h2>
+					<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+				</header>
+				<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing.
+					Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan
+					consequat adipiscing lorem.</p>
+				<ul class="actions">
+					<li><a href="#" class="button">Learn More</a></li>
+				</ul>
+			</div>
+			<a href="#seven" class="goto-next scrolly">Next</a>
+		</section>
+		
+		<!-- Seven AKA OTHER PROJECTS -->
 
 
 		<!-- Five -->
@@ -216,19 +261,29 @@
 			</div>
 		</section>-->
 
+		<!-- Thanks Note -->
+		<section id="thanks-note" class="wrapper style2 special fade">
+			<div class="container">
+				<header>
+					<h2>Thank you for your time!</h2>
+					<p>I hope to hear from you in the future :) </p>
+				</header>
+			</div>
+		</section>
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 				<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+				<li><a href="#" class="icon brands style2 fa-gitlab"><span class="label">GitLab</span></a></li>
 				<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
+			<br>
 			<ul class="copyright">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>&copy; Diogo Martins. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a> customized by Diogo Martins</li>
 			</ul>
 		</footer>
 
