Add changes to home page and css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="page-wrapper">
 
 		<!-- Header -->
-		<header id="header">
+		<!--<header id="header">
 			<h1 id="logo"><a href="index.html">Landed</a></h1>
 			<nav id="nav">
 				<ul>
@@ -45,7 +45,7 @@
 					<li><a href="#" class="button primary">Sign Up</a></li>
 				</ul>
 			</nav>
-		</header>
+		</header>-->
 
 		<!-- Banner -->
 		<section id="banner">
@@ -266,7 +266,9 @@
 			<div class="container">
 				<header>
 					<h2>Thank you for your time!</h2>
-					<p>I hope to hear from you in the future :) </p>
+					<p>You can find more detailed information about me and my work in my 
+						<a class="dark" href="#">Curriculum Vitae</a>
+						<br>I hope to hear from you in the future :) </p>
 				</header>
 			</div>
 		</section>
