--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
-<body class="is-preload">
+<body class="is-preload landing">
 	<div id="page-wrapper">
 
 		<!-- Header -->
@@ -46,39 +46,14 @@
 					}
 				}
 			</script>
-
-			<nav id="nav">
-				<ul>
-					<li><a href="index.html">Back</a></li>
-					<li>
-						<a href="#">Layouts</a>
-						<ul>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
-							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
-							<li>
-								<a href="#">Submenu</a>
-								<ul>
-									<li><a href="#">Option 1</a></li>
-									<li><a href="#">Option 2</a></li>
-									<li><a href="#">Option 3</a></li>
-									<li><a href="#">Option 4</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="#" class="button primary">Sign Up</a></li>
-				</ul>
-			</nav>
 		</header>
 
 		<!-- Main -->
 		<div id="main" class="wrapper style1">
 			<div class="container">
 				<header class="major">
-					<h2>Left Sidebar</h2>
-					<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+					<h2>Holy Hell</h2>
+					<p>A chaotic and bloody vengeance that ends with God's death</p>
 				</header>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
@@ -86,13 +61,16 @@
 						<!-- Sidebar -->
 						<section id="sidebar">
 							<section>
-								<h3>Magna Feugiat</h3>
+								<h3>Description</h3>
 								<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a
 									ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit
 									ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
 								<footer>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn More</a></li>
+									<ul class="game-info">
+										<li><p>Action-adventure</p></li>
+										<li><p>Exploration</p></li>
+										<li><p>Top-down</p></li>
+										<li><p>2D</p></li>
 									</ul>
 								</footer>
 							</section>
