Add holy hell's page (incomplete)

--- a/holy-hell.html
+++ b/holy-hell.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Left Sidebar - Landed by HTML5 UP</title>
+	<title>Diogo Martins - Holy Hell</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -61,10 +61,6 @@
 						<!-- Sidebar -->
 						<section id="sidebar">
 							<section>
-								<h3>Description</h3>
-								<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a
-									ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit
-									ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
 								<footer>
 									<ul class="game-info">
 										<li><p>Action-adventure</p></li>
@@ -73,50 +69,62 @@
 										<li><p>2D</p></li>
 									</ul>
 								</footer>
+								<h3>Description</h3>
+								<p>Holy Hell is an action-adventure game set in Heaven, where you are searching for God so you
+									can avenge your death. 
+									Holy Hell is an action-adventure game 
+								</p>
+								<footer>
+									<ul class="actions">
+										<li><a href="#" class="button">Itch.io (Download Link)</a></li>
+									</ul>
+								</footer>
+
 							</section>
-							<hr />
+							<hr/>
 							<section>
-								<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-								<h3>Amet Lorem Tempus</h3>
+								<h3>Gallery</h3>
+								<a href="#" class="image fit"><img src="images/projects/holyhell/banner.png" alt="" /></a>
 								<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a
 									ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit
 									ullamcorper sed blandit lorem ipsum dolore.</p>
-								<footer>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 						</section>
 
 					</div>
-					<div class="col-8 col-12-medium imp-medium">
+					<div class="col-8 col-12-medium medium">
 
 						<!-- Content -->
 						<section id="content">
-							<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-							<h3>Dolore Amet Consequat</h3>
-							<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo,
-								tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam
-								quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium
-								interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo.
-								Cras vel neque eros. Vestibulum diam.</p>
-							<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt
-								pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque
-								ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna.
-								Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-							<h3>Sed Magna Ornare</h3>
-							<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus.
-								Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit
-								in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum
-								metus.</p>
-							<ul>
-								<li>Faucibus orci lobortis ac adipiscing integer.</li>
-								<li>Col accumsan arcu mi aliquet placerat.</li>
-								<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-								<li>Blandit massa non blandit tempor interdum.</li>
-								<li>Lacinia mattis arcu nascetur lobortis.</li>
+							<a href="#" class="image fit"><img src="images/projects/holyhell/banner.png" alt="" /></a>
+							<h3>About The Project</h3>
+							<p>Holy Hell was a 6 month project that I developed in Unity, along with 
+								3 colleagues of mine, for my last last graduation year. Aside from improving skills that I already had (e.g. programming),
+								it helped me develop skills in project management and marketing aswell.</p>
+							<h3>My Role In The Project</h3>
+							<ul class="roles">
+								<li>Programming
+									<p>	I was Holy Hell's lead programmer, focusing mostly on gameplay.</p>
+								</li>
+								
+								<li>Game Design
+									<p>	I've worked on both game design and level design side-by-side with my colleagues.</p>
+								</li>
+								<li>UI Design
+									<p>	With the use of Photoshop, I created Holy Hell's UI components, later tweaking and adding visual effects in Unity.</p>
+								</li>
+								<li>2D Art
+									<p>	I was also responsible for creating promo-art and official documents for the game such as the Artbook.
+									</p>
+								</li>
+								<li>Marketing
+									<p>	Besides the creation of posters, banners and other promotional art, I was the project's marketing manager
+										in charge of many social networks (Instagram, Twitter, IndieDB, etc) and all communications with the press.
+									</p>
+								</li>
 							</ul>
+							<h3>Gallery</h3>
+							<p>Colocar imagens aqui</p>
 						</section>
 
 					</div>
