--- a/index.html
+++ b/index.html
@@ -50,18 +50,17 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="content">
-				<span class="image"><img src="images/me.jpg" alt="" /></span>
+				<span class="image"><img src="images/me/me.jpg" alt="" /></span>
 				<header>
 					<h2>Diogo Martins</h2>
 					<p>Game Developer<br>Programmer<br>2D Artist</p>
 					<ul class="icons">
-						<li><a href="#" target="_blank" class="icon brands alt fa-facebook-f"><span
-									class="label">Facebook</span></a>
-						<li><a href="#" target="_blank" class="icon brands alt fa-instagram"><span
-									class="label">Instagram</span></a>
-						</li>
 						<li><a href="#" target="_blank" class="icon brands alt fa-twitter"><span
 									class="label">Twitter</span></a></li>
+						<li><a href="#" target="_blank" class="icon brands alt fa-instagram"><span
+									class="label">Instagram</span></a></li>
+						<li><a href="#" target="_blank" class="icon brands alt fa-facebook-f"><span
+									class="label">Facebook</span></a>
 						<li><a href="#" target="_blank" class="icon brands alt fa-linkedin-in"><span
 									class="label">LinkedIn</span></a>
 							<!--<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
@@ -78,7 +77,7 @@
 
 		<!-- One -->
 		<section id="one" class="spotlight style1 bottom">
-			<span class="image fit main"><img src="images/me3.jpg" alt="" /></span>
+			<span class="image fit main"><img src="images/me/me3.jpg" alt="" /></span>
 			<div class="content">
 				<div class="container">
 					<div class="row">
@@ -170,17 +169,15 @@
 		</section>
 		<!-- Three -->
 		<section id="three" class="spotlight style2 right">
-			<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+			<span class="image fit main"><img src="images/projects/holyhell/spotlight2.JPG" alt="" /></span>
 			<div class="content">
 				<header>
-					<h2>Interdum amet non magna accumsan</h2>
-					<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+					<h2>Holy Hell</h2>
+					<p class="subtitle">Programming  |  Game Design  |  UI Design</p>
 				</header>
-				<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing.
-					Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan
-					consequat adipiscing lorem.</p>
+				<p>Holy Hell is an adventure game</p>
 				<ul class="actions">
-					<li><a href="left-sidebar.html" class="button">Learn More</a></li>
+					<li><a href="holy-hell.html" class="button">Learn More</a></li>
 				</ul>
 			</div>
 			<a href="#four" class="goto-next scrolly">Next</a>
@@ -239,7 +236,7 @@
 			</div>
 			<a href="#seven" class="goto-next scrolly">Next</a>
 		</section>
-		
+
 		<!-- Seven AKA OTHER PROJECTS -->
 
 
@@ -266,7 +263,7 @@
 			<div class="container">
 				<header>
 					<h2>Thank you for your time!</h2>
-					<p>You can find more detailed information about me and my work in my 
+					<p>You can find more detailed information about me and my work in my
 						<a class="dark" href="#">Curriculum Vitae</a>
 						<br>I hope to hear from you in the future :) </p>
 				</header>
@@ -275,9 +272,9 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
+				<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 				<li><a href="#" class="icon brands style2 fa-gitlab"><span class="label">GitLab</span></a></li>
 				<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
