Improve back button on Project page; Fix problem with main page responsiveness.

--- a/holy-hell.html
+++ b/holy-hell.html
@@ -20,7 +20,8 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="javascript:goBack('index.html')">Back</a></h1>
+			<!--<h1 id="logo"><a href="javascript:goBack('index.html')">Back</a></h1>-->
+			<a href="javascript:goBack('index.html')" class="goto-previous">Next</a>
 
 			<script type="text/javascript">
 				function goBack(url) {
@@ -63,16 +64,16 @@
 							<section>
 								<footer>
 									<ul class="game-info">
+										<li><p>Singleplayer</p></li>
 										<li><p>Action-adventure</p></li>
-										<li><p>Exploration</p></li>
 										<li><p>Top-down</p></li>
 										<li><p>2D</p></li>
 									</ul>
 								</footer>
-								<h3>Description</h3>
+								<h3>Synopsis</h3>
 								<p>Holy Hell is an action-adventure game set in Heaven, where you are searching for God so you
-									can avenge your death. 
-									Holy Hell is an action-adventure game 
+									can avenge your death. Fight angels, mythical beings, the Seven Virtues and God himself as 
+									you venture through all corners of Heaven.
 								</p>
 								<footer>
 									<ul class="actions">
@@ -83,12 +84,13 @@
 							</section>
 							<hr/>
 							<section>
-								<h3>Gallery</h3>
-								<a href="#" class="image fit"><img src="images/projects/holyhell/banner.png" alt="" /></a>
-								<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a
-									ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit
-									ullamcorper sed blandit lorem ipsum dolore.</p>
+								<h3>Trailer</h3>
+								<div class="video embed fit">
+									<!--<video src="images/projects/holyhell/trailer.mp4" poster="images/projects/holyhell/banner.png"></video>-->
+									<iframe src="https://www.youtube-nocookie.com/embed/NzishIREebw?rel=0" frameborder="0"></iframe>
+								</div>
 							</section>
+							<hr/>
 						</section>
 
 					</div>
