--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 						<li><a href="#" target="_blank" class="icon brands alt fa-linkedin-in"><span
 									class="label">LinkedIn</span></a>
 							<!--<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
-						<li><a href="https://gitlab.com/diogo_martins99" target="_blank"
-								class="icon brands alt fa-gitlab"><span class="label">GitLab</span></a></li>
+						<li><a href="" target="_blank" class="icon brands alt fa-gitlab"><span
+									class="label">GitLab</span></a></li>
 						<li><a href="#" target="_blank" class="icon solid alt fa-envelope"><span
 									class="label">Email</span></a></li>
 					</ul>
@@ -173,7 +173,7 @@
 			<div class="content">
 				<header>
 					<h2>Holy Hell</h2>
-					<p class="subtitle">Programming  |  Game Design  |  UI Design</p>
+					<p class="subtitle">Programming | Game Design | UI Design</p>
 				</header>
 				<p>Holy Hell is an adventure game</p>
 				<ul class="actions">
