Add new structure to present projects

--- a/index.html
+++ b/index.html
@@ -167,8 +167,63 @@
 				</footer>
 			</div>
 		</section>
+		<!-- Five -->
+		<header class="major">
+			<h2>Projects</h2>
+		</header>
+		<section class="wrapper2 style1 align-center">
+			<!-- Gallery -->
+			<div class="gallery style1 medium onscroll-fade-in">
+				<article>
+					<span class="image2"><img src="images/projects/holyhell/spotlight3.JPG" alt="" /></span>
+					<div class="caption">
+						<h3>Holy Hell</h3>
+						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
+						<ul class="actions">
+							<li><a href="holy-hell.html" class="button">Details</a></li>
+						</ul>
+					</div>
+				</article>
+				<article>
+					<span class="image2"><img src="images/projects/bernardino/spotlight.png" alt="" /></span>
+					<div class="caption">
+						<h3>Bernardino</h3>
+						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
+						<ul class="actions">
+							<li><a href="holy-hell.html" class="button">Details</a></li>
+						</ul>
+					</div>
+				</article>
+				<article>
+					<span class="image2"><img src="images/projects/illuminants/spotlight4.png" alt="" /></span>
+					<div class="caption">
+						<h3>Illuminants</h3>
+						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
+						<ul class="actions">
+							<li><a href="holy-hell.html" class="button">Details</a></li>
+						</ul>
+					</div>
+				</article>
+				<article>
+					<span class="image2"><img src="images/projects/illuminants/spotlight.PNG" alt="" /></span>
+					<div class="caption">
+						<h3>Illuminants</h3>
+						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
+						<ul class="actions">
+							<li><a href="holy-hell.html" class="button">Details</a></li>
+						</ul>
+					</div>
+				</article>
+			</div>
+
+		</section>
+
+
+
+		<!------------------------------------------------------------>
+
 		<!-- Three -->
-		<section id="three" class="spotlight style2 right">
+		<!--<section id="three" class="spotlight style2 right">
 			<span class="image fit main"><img src="images/projects/holyhell/spotlight2.JPG" alt="" /></span>
 			<div class="content">
 				<header>
@@ -184,7 +239,7 @@
 		</section>
 
 		<!-- Four -->
-		<section id="Four" class="spotlight style3 left">
+		<!--<section id="Four" class="spotlight style3 left">
 			<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 			<div class="content">
 				<header>
@@ -202,7 +257,7 @@
 		</section>
 
 		<!-- Five -->
-		<section id="five" class="spotlight style2 right">
+		<!--<section id="five" class="spotlight style2 right">
 			<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 			<div class="content">
 				<header>
@@ -220,7 +275,7 @@
 		</section>
 
 		<!-- Six -->
-		<section id="six" class="spotlight style3 left">
+		<!--<section id="six" class="spotlight style3 left">
 			<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 			<div class="content">
 				<header>
