--- a/holy-hell.html
+++ b/holy-hell.html
@@ -64,15 +64,25 @@
 							<section>
 								<footer>
 									<ul class="game-info">
-										<li><p>Singleplayer</p></li>
-										<li><p>Action-adventure</p></li>
-										<li><p>Top-down</p></li>
-										<li><p>2D</p></li>
+										<li>
+											<p>Singleplayer</p>
+										</li>
+										<li>
+											<p>Action-adventure</p>
+										</li>
+										<li>
+											<p>Top-down</p>
+										</li>
+										<li>
+											<p>2D</p>
+										</li>
 									</ul>
 								</footer>
 								<h3>Synopsis</h3>
-								<p>Holy Hell is an action-adventure game set in Heaven, where you are searching for God so you
-									can avenge your death. Fight angels, mythical beings, the Seven Virtues and God himself as 
+								<p>Holy Hell is an action-adventure game set in Heaven, where you are searching for God
+									so you
+									can avenge your death. Fight angels, mythical beings, the Seven Virtues and God
+									himself as
 									you venture through all corners of Heaven.
 								</p>
 								<footer>
@@ -82,15 +92,16 @@
 								</footer>
 
 							</section>
-							<hr/>
+							<hr />
 							<section>
 								<h3>Trailer</h3>
 								<div class="video embed fit">
 									<!--<video src="images/projects/holyhell/trailer.mp4" poster="images/projects/holyhell/banner.png"></video>-->
-									<iframe src="https://www.youtube-nocookie.com/embed/NzishIREebw?rel=0" frameborder="0"></iframe>
+									<iframe src="https://www.youtube-nocookie.com/embed/-r2_EzN8vMw?rel=0" width="560" height="315" frameborder="0">
+									</iframe>
 								</div>
 							</section>
-							<hr/>
+							<hr />
 						</section>
 
 					</div>
@@ -100,33 +111,65 @@
 						<section id="content">
 							<a href="#" class="image fit"><img src="images/projects/holyhell/banner.png" alt="" /></a>
 							<h3>About The Project</h3>
-							<p>Holy Hell was a 6 month project that I developed in Unity, along with 
-								3 colleagues of mine, for my last last graduation year. Aside from improving skills that I already had (e.g. programming),
+							<p>Holy Hell was a 6 month project that I developed in Unity, along with
+								3 colleagues of mine, for my last last graduation year. Aside from improving skills that
+								I already had (e.g. programming),
 								it helped me develop skills in project management and marketing aswell.</p>
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Programming
-									<p>	I was Holy Hell's lead programmer, focusing mostly on gameplay.</p>
+									<p> I was Holy Hell's lead programmer, focusing mostly on gameplay.</p>
 								</li>
-								
+
 								<li>Game Design
-									<p>	I've worked on both game design and level design side-by-side with my colleagues.</p>
+									<p> I've worked on both game design and level design side-by-side with my
+										colleagues.</p>
 								</li>
 								<li>UI Design
-									<p>	With the use of Photoshop, I created Holy Hell's UI components, later tweaking and adding visual effects in Unity.</p>
+									<p> With the use of Photoshop, I created Holy Hell's UI components, later tweaking
+										and adding visual effects in Unity.</p>
 								</li>
 								<li>2D Art
-									<p>	I was also responsible for creating promo-art and official documents for the game such as the Artbook.
+									<p> I was also responsible for creating promo-art and official documents for the
+										game such as the Artbook.
 									</p>
 								</li>
 								<li>Marketing
-									<p>	Besides the creation of posters, banners and other promotional art, I was the project's marketing manager
-										in charge of many social networks (Instagram, Twitter, IndieDB, etc) and all communications with the press.
+									<p> Besides the creation of posters, banners and other promotional art, I was the
+										project's marketing manager
+										in charge of many social networks (Instagram, Twitter, IndieDB, etc) and all
+										communications with the press.
 									</p>
 								</li>
 							</ul>
+							<!-- Gallery  -->
 							<h3>Gallery</h3>
-							<p>Colocar imagens aqui</p>
+							<div class="gallery2">
+								<article class="from-left">
+									<a href="images/projects/holyhell/banner.png" class="image2 fit"><img
+											src="images/projects/holyhell/banner.png" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/spotlight2.JPG" class="image2 fit"><img
+											src="images/projects/holyhell/spotlight2.JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/holyhell/spotlight3.jpg" class="image2 fit"><img
+											src="images/projects/holyhell/spotlight3.JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/spotlight2.JPG" class="image2 fit"><img
+											src="images/projects/holyhell/spotlight2.JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/holyhell/spotlight3.JPG" class="image2 fit"><img
+											src="images/projects/holyhell/spotlight3.JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/spotlight2.JPG" class="image2 fit"><img
+											src="images/projects/holyhell/spotlight2.JPG" alt="" /></a>
+								</article>
+							</div>
 						</section>
 
 					</div>
@@ -155,8 +198,9 @@
 
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.poptrox.min.js"></script>
 	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
 	<script src="assets/js/jquery.scrollex.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
