--- a/index.html
+++ b/index.html
@@ -175,43 +175,31 @@
 			<!-- Gallery -->
 			<div class="gallery style1 medium onscroll-fade-in">
 				<article>
-					<span class="image2"><img src="images/projects/holyhell/spotlight3.JPG" alt="" /></span>
+					<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight3.JPG" alt="" /></a>
 					<div class="caption">
 						<h3>Holy Hell</h3>
 						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
-						<ul class="actions">
-							<li><a href="holy-hell.html" class="button">Details</a></li>
-						</ul>
 					</div>
 				</article>
 				<article>
-					<span class="image2"><img src="images/projects/bernardino/spotlight.png" alt="" /></span>
+					<a href="holy-hell.html" class="image2"><img src="images/projects/bernardino/spotlight.png" alt="" /></a>
 					<div class="caption">
 						<h3>Bernardino</h3>
 						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
-						<ul class="actions">
-							<li><a href="holy-hell.html" class="button">Details</a></li>
-						</ul>
 					</div>
 				</article>
 				<article>
-					<span class="image2"><img src="images/projects/illuminants/spotlight4.png" alt="" /></span>
+					<a href="holy-hell.html" class="image2"><img src="images/projects/illuminants/spotlight4.png" alt="" /></a>
 					<div class="caption">
 						<h3>Illuminants</h3>
 						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
-						<ul class="actions">
-							<li><a href="holy-hell.html" class="button">Details</a></li>
-						</ul>
 					</div>
 				</article>
 				<article>
-					<span class="image2"><img src="images/projects/illuminants/spotlight.PNG" alt="" /></span>
+					<a href="holy-hell.html" class="image2"><img src="images/projects/illuminants/spotlight.PNG" alt="" /></a>
 					<div class="caption">
 						<h3>Illuminants</h3>
 						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
-						<ul class="actions">
-							<li><a href="holy-hell.html" class="button">Details</a></li>
-						</ul>
 					</div>
 				</article>
 			</div>
@@ -345,6 +333,7 @@
 
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.poptrox.min.js"></script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
 	<script src="assets/js/jquery.dropotron.min.js"></script>
 	<script src="assets/js/jquery.scrollex.min.js"></script>
